fix: implement basic podcast player with commands

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -188,5 +188,6 @@
     "episodes": "Episodes",
     "search": "Search",
     "retry": "Retry",
-    "oopsSomethingWentWrong": "Oops! Something went wrong."
+    "oopsSomethingWentWrong": "Oops! Something went wrong.",
+    "collection": "Collection"
 }
